# self-referential

./: README.md  config.yaml  prompts.yaml  pyproject.toml  run_all.sh  run_experiment.py
analysis/: activation_analysis.py  content_coding.py  entropy_analysis.py  generate_report.py  llm_judge.py  probing.py  statistics.py  utils.py
results/: activation_distances.csv  report.md
results/coding/: inter_rater_agreement.json  llm_judge_summary.csv  summary.csv
results/statistics/: agreement_statistics.json  content_statistics.csv  entropy_statistics_enhanced.csv  mixed_effects.json  probing_statistics.json  scaling_statistics.json
