[project]
name = "llm-introspection"
version = "0.1.0"
description = "Self-referential cognition in language models: disentangling instruction tuning effects from architectural precursors"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.40.0",
    "accelerate",
    "bitsandbytes",
    "sentence-transformers",
    "scikit-learn",
    "umap-learn>=0.5.6",
    "llvmlite>=0.43.0",
    "matplotlib",
    "seaborn",
    "pandas",
    "numpy",
    "pyyaml",
    "tqdm",
    "tabulate",
    "scipy",
    "statsmodels>=0.14.6",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
